--- a/index.html
+++ b/index.html
@@ -3,17 +3,29 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>53rd Independence Day</title>
+    <meta name="description" content="Celebrate the 53rd Independence Day of Bangladesh with an interactive and visually appealing map design.">
+    <title>53rd Independence Day | Bangladesh</title>
     <link rel="stylesheet" href="styles.css">
+    <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <div class="container">
+    <header>
         <h1>53rd Independence Day of Bangladesh</h1>
+    </header>
+    <main>
         <div class="map-container">
             <img src="assets/bangladesh-map.png" alt="Bangladesh Map">
-            <div class="text-overlay">53rd Independence</div>
+            <div class="text-overlay">
+                <span>53<sup>rd</sup></span> Independence
+            </div>
         </div>
-    </div>
+        <p class="description">
+            On this auspicious day, we honor the resilience and achievements of the people of Bangladesh. Let us unite and move forward with pride!
+        </p>
+    </main>
+    <footer>
+        <p>&copy; 2024 | Designed with ❤️ for Bangladesh</p>
+    </footer>
     <script src="script.js"></script>
 </body>
 </html>
