--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <title>53rd Independence Day | Bangladesh</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
+
 </head>
 <body>
     <header>
