--- a/index.html
+++ b/index.html
@@ -22,11 +22,11 @@
             </div>
         </div>
         <p class="description">
-            On this auspicious day, we honor the resilience and achievements of the people of Bangladesh. Let us unite and move forward with pride!
+           "On this auspicious day, we honor the resilience, courage, and unwavering spirit of the people of Bangladesh. It is a day to reflect on the sacrifices made by our ancestors and the progress we have achieved as a nation. With every year that passes, we continue to grow stronger, united in our pursuit of a brighter future. Today, as we celebrate our 53rd Independence Day, let us take pride in our rich history, our vibrant culture, and the indomitable will of our people. Together, we move forward with hope and determination, committed to building a prosperous and inclusive Bangladesh for generations to come. Let us stand united, hand in hand, to forge a path of peace, prosperity, and progress. Happy Independence Day, Bangladesh!"
         </p>
     </main>
     <footer>
-        <p>&copy; 2024 | Designed with ❤️ for Bangladesh</p>
+        <p>&copy; 2024 | Designed with ❤️ for Bangladesh | Yeahyea Hassan </p>
     </footer>
     <script src="script.js"></script>
 </body>
