--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="map-container">
             <img src="assets/bangladesh-map.png" alt="Bangladesh Map">
             <div class="text-overlay">
-                <span>53<sup>rd</sup></span> Independence
+                <span><sup>rd</sup></span>
             </div>
         </div>
         <p class="description">
-           "On this auspicious day, we honor the resilience, courage, and unwavering spirit of the people of Bangladesh. It is a day to reflect on the sacrifices made by our ancestors and the progress we have achieved as a nation. With every year that passes, we continue to grow stronger, united in our pursuit of a brighter future. Today, as we celebrate our 53rd Independence Day, let us take pride in our rich history, our vibrant culture, and the indomitable will of our people. Together, we move forward with hope and determination, committed to building a prosperous and inclusive Bangladesh for generations to come. Let us stand united, hand in hand, to forge a path of peace, prosperity, and progress. Happy Independence Day, Bangladesh!"
+          On this auspicious day, we honor the resilience and achievements of the people of Bangladesh. With unwavering spirit, they have overcome challenges and built a vibrant nation. Let us unite in celebration of our shared history and move forward with pride. Together, we embrace the future, strengthening our nation's legacy.
         </p>
     </main>
     <footer>
