--- a/index.html
+++ b/index.html
@@ -18,11 +18,11 @@
         <div class="map-container">
             <img src="assets/bangladesh-map.png" alt="Bangladesh Map">
             <div class="text-overlay">
-                <span><sup>rd</sup></span>
+                <span><sup></sup></span>
             </div>
         </div>
         <p class="description">
-          On this auspicious day, we honor the resilience and achievements of the people of Bangladesh. With unwavering spirit, they have overcome challenges and built a vibrant nation. Let us unite in celebration of our shared history and move forward with pride. Together, we embrace the future, strengthening our nation's legacy.
+          On this auspicious day, we celebrate the spirit of freedom and the unwavering courage of the people of Bangladesh. Their sacrifices have paved the way for a prosperous future, inspiring generations to come. Today, we honor the legacy of independence and the continuous progress that Bangladesh has made. Let us reflect on the struggles that brought us here and cherish the unity that binds us together. As we move forward, let us embrace the future with pride, hope, and determination for a brighter tomorrow.
         </p>
     </main>
     <footer>
