--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="Celebrate the 53rd Independence Day of Bangladesh with an interactive and visually appealing map design.">
-    <title>53rd Independence Day | Bangladesh</title>
+    <title>53rd Victory Day | Bangladesh</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="icon" href="assets/favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
@@ -12,7 +12,7 @@
 </head>
 <body>
     <header>
-        <h1>53rd Independence Day of Bangladesh</h1>
+        <h1>53rd Victory Day of Bangladesh</h1>
     </header>
     <main>
         <div class="map-container">
@@ -22,11 +22,11 @@
             </div>
         </div>
         <p class="description">
-          On this auspicious day, we celebrate the spirit of freedom and the unwavering courage of the people of Bangladesh. Their sacrifices have paved the way for a prosperous future, inspiring generations to come. Today, we honor the legacy of independence and the continuous progress that Bangladesh has made. Let us reflect on the struggles that brought us here and cherish the unity that binds us together. As we move forward, let us embrace the future with pride, hope, and determination for a brighter tomorrow.
+          On this Victory Day, we celebrate the spirit of freedom and the unwavering courage of the people of Bangladesh. Their sacrifices and determination have paved the way for a prosperous future, inspiring generations to come. Today, we honor the legacy of our victory and the continuous progress Bangladesh has made. Let us reflect on the struggles that led us to this triumph and cherish the unity that binds us together. As we move forward, let us embrace the future with pride, hope, and determination for a brighter tomorrow.
         </p>
     </main>
     <footer>
-        <p>&copy; 2024 | Designed with ❤️ for Bangladesh | Yeahyea Hassan </p>
+        <p>&copy; 2024 | Designed with ❤ for Bangladesh | Yeahyea Hassan </p>
     </footer>
     <script src="script.js"></script>
 </body>
